--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Welcome to My Website!</title>
+  <title>Hikewise Tours</title>
 </head>
 <body>
-  <h1>Hello, World!</h1>
-  <p>This is my first website using GitHub Pages!</p>
+  <h1>Welcome to Hikewise Tours!</h1>
+  <p>Your adventure starts here.</p>
 </body>
 </html>
